[package]
name = "rdm"
version = "0.1.13"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "charset", "http2", "json"] }
anyhow = "1"
futures-util = "0.3"
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3+spec-1.1.0"
libc = "0.2"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
